added distributed list and simple store client implementations